# Vacuumeter

./: CMakeLists.txt  database_manager.cpp  database_manager.h  main_window.cpp  main_window.h  protocol_handler.cpp  protocol_handler.h  transport_interface.h  usb_transport.cpp  usb_transport.h  wifi_transport.cpp  wifi_transport.h
.github/workflows/: windows_build.yml
